@@ -1,17 +1,19 @@
-package com.example.zonafit.application.userservice.impl;
+package com.example.zonafit.application.membershipservice.impl;
 
+import com.example.zonafit.application.membershipservice.IMembershipService;
 import com.example.zonafit.domain.model.Membership;
 import com.example.zonafit.domain.model.Payment;
 import com.example.zonafit.domain.model.User;
-import com.example.zonafit.dto.MembershipPurchaseDTO;
-import com.example.zonafit.dto.MembershipResponseDTO;
-import com.example.zonafit.dto.PaymentResponseDTO;
-import com.example.zonafit.globalExceptionHandler.BusinessException;
-import com.example.zonafit.globalExceptionHandler.ResourceNotFoundException;
+import com.example.zonafit.dto.membership.MembershipPurchaseDTO;
+import com.example.zonafit.dto.membership.MembershipResponseDTO;
+import com.example.zonafit.dto.payment.PaymentResponseDTO;
+import com.example.zonafit.domain.exception.BusinessException;
+import com.example.zonafit.domain.exception.ResourceNotFoundException;
+import com.example.zonafit.domain.enums.TypeMembership;
 import com.example.zonafit.infraestructure.repository.MembershipRepositoryPort;
 import com.example.zonafit.infraestructure.repository.PaymentRepositoryPort;
 import com.example.zonafit.infraestructure.repository.UserRepository;
-import com.example.zonafit.infraestructure.controller.utils.StatusMembership;
+import com.example.zonafit.domain.enums.StatusMembership;
 import com.example.zonafit.mapper.MembershipMapper;
 import com.example.zonafit.mapper.PaymentMapper;
 import lombok.RequiredArgsConstructor;
@@ -21,12 +23,11 @@ import org.springframework.transaction.annotation.Transactional;
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-@Transactional
-public class MembershipService {
+@Transactional (readOnly = true)
+public class MembershipServiceImpl implements IMembershipService {
     
     private final MembershipRepositoryPort membershipRepository;
     private final PaymentRepositoryPort paymentRepository;
@@ -35,12 +36,11 @@ public class MembershipService {
     private final PaymentMapper paymentMapper;
     
     // Precios de las membresías
-    private static final double MONTHLY_PRICE = 80000.0;
-    private static final double QUARTERLY_PRICE = 216000.0; // 10% descuento
-    private static final double YEARLY_PRICE = 768000.0; // 20% descuento
-    private static final double VIP_PRICE = 100000.0;
+    private static final BigDecimal MONTHLY_PRICE = BigDecimal.valueOf(80000.0);
+    private static final BigDecimal QUARTERLY_PRICE = BigDecimal.valueOf(216000.0); // 10% descuento
+    private static final BigDecimal YEARLY_PRICE = BigDecimal.valueOf(768000.0); // 20% descuento
+    private static final BigDecimal VIP_PRICE = BigDecimal.valueOf(100000.0);
 
-    @Transactional
     public MembershipResponseDTO purchaseMembership(MembershipPurchaseDTO purchaseDTO) {
 
         User user = userRepository.findById(purchaseDTO.userId())
@@ -52,7 +52,7 @@ public class MembershipService {
             throw new BusinessException("El usuario ya tiene una membresía activa");
         }
 
-        double price = calculatePrice(purchaseDTO.type());
+        BigDecimal price = calculatePrice(purchaseDTO.type());
 
         LocalDate now = LocalDate.now();
         LocalDate endDate = calculateEndDate(now, purchaseDTO.type());
@@ -62,14 +62,14 @@ public class MembershipService {
                 .startDate(now)
                 .endDate(endDate)
                 .status(StatusMembership.ACTIVE)
-                .price(price)
+                .price(price.doubleValue())
                 .user(user)
                 .build();
 
         Membership savedMembership = membershipRepository.save(membership);
 
         Payment payment = Payment.builder()
-                .amount(BigDecimal.valueOf(price))
+                .amount(price)
                 .paymentDate(now)
                 .paymentMethod(purchaseDTO.paymentMethod())
                 .user(user)
@@ -80,31 +80,30 @@ public class MembershipService {
         return membershipMapper.toResponseDTO(savedMembership);
     }
 
-
-    @Transactional(readOnly = true)
     public MembershipResponseDTO getMembershipByUserId(Long userId) {
         Membership membership = membershipRepository.findByUserId(userId)
-                .orElseThrow(() -> new RuntimeException("No se encontró membresía para el usuario con ID: " + userId));
+                .orElseThrow(() -> new ResourceNotFoundException("No se encontró membresía para el usuario con ID: " + userId));
         return membershipMapper.toResponseDTO(membership);
     }
-    
-    @Transactional(readOnly = true)
+
     public List<PaymentResponseDTO> getPaymentsByUserId(Long userId) {
         return paymentRepository.findByUserId(userId)
                 .stream()
                 .map(paymentMapper::toResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
     
     public void cancelMembership(Long userId) {
         Membership membership = membershipRepository.findByUserId(userId)
                 .orElseThrow(() -> new RuntimeException("No se encontró membresía para el usuario con ID: " + userId));
-        
-        membership.setStatus(StatusMembership.INACTIVE);
+
+        if (membership.getStatus() == StatusMembership.INACTIVE) {
+            throw new BusinessException("La membresía ya está cancelada");
+        }
         membershipRepository.save(membership);
     }
     
-    private double calculatePrice(com.example.zonafit.infraestructure.controller.utils.TypeMembership type) {
+    private BigDecimal calculatePrice(TypeMembership type) {
         return switch (type) {
             case MONTHLY -> MONTHLY_PRICE;
             case QUARTERLY -> QUARTERLY_PRICE;
@@ -113,7 +112,7 @@ public class MembershipService {
         };
     }
     
-    private LocalDate calculateEndDate(LocalDate startDate, com.example.zonafit.infraestructure.controller.utils.TypeMembership type) {
+    private LocalDate calculateEndDate(LocalDate startDate, TypeMembership type) {
         return switch (type) {
             case MONTHLY -> startDate.plusMonths(1);
             case QUARTERLY -> startDate.plusMonths(3);
